--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
+/* App.css  */
+ .container {
+     max-width: 90vw;
+     margin: 0 auto;
+     padding: 20px 150px;
+     background-color: #F5EEE6;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+ nav {
+     background-color: #00a7aa;
+     padding: 10px;
+     border-radius: 10px;
+ }
 
-.App-link {
-  color: #61dafb;
-}
+ ul {
+     list-style: none;
+     padding: 0;
+     margin: 0;
+     display: flex;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ li {
+     margin-right: 20px;
+ }
+
+ a {
+
+     text-decoration: none;
+     color: white;
+     font-weight: bold;
+ }
+
+ a:hover {
+     color: #ffd700;
+ }
+
+ .active {
+
+     color: #ffd700;
+ }
+
+ /* FLEX  */
+ .flex-column {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .flex-row {
+     display: flex;
+     flex-wrap: wrap;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+ }
